--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,6 @@
 * {
-    font-family: 'Roboto', sans-serif
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 
@@ -8,7 +9,7 @@
 }
 
 
-ol.pokemons {
+.pokemons {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -16,12 +17,55 @@ ol.pokemons {
     grid-template-columns: 1fr 1fr;
 }
 
+.pokemon .name {
+    color: #fff;
+    margin-bottom: 0.25rem;
+    
+}
 
-ol.pokemons li{
+.pokemon {
+   display: flex;
+   flex-direction: column;
    margin: 0.5rem;
    padding: 2rem 1rem;
-   background-color: #14A06F;
-   color: white;
+   background-color: #49d0b4;
    border-radius: 1rem;
-   height: 100px;
+   
 }
+
+.pokemon .number {
+    color: #000;
+    opacity: 0.4;
+    text-align: right;
+}
+
+.pokemon .detail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pokemon .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+}
+
+.pokemon .detail .types .type {
+   background-color: rgb(23, 199, 199); 
+   color: #fff;
+   padding: .25rem .5rem;
+   margin: .25rem 0;
+   font-size: .625rem;
+   border-radius: 1rem;
+
+}
+
+.pokemons .detail img {
+    max-width: 100%;
+    height: 70px;
+
+}
+
