--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,10 +1,11 @@
 * {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #FE938C;
 }
 
 @media screen and (min-width: 992px) {
